crates/playwright-rs-macros/tests/ui/unknown_engine.rs
use playwright_rs_macros::locator;

fn main() {
    let _ = locator!("foo=bar");
}
